@@ -61,10 +61,8 @@ class JavaTemplateTest6Test implements RewriteTest {
             """
               class Test {
                   void test() {
-                      @SuppressWarnings("ALL")
-                      final int m;
-                      @SuppressWarnings("ALL")
-                      int n;
+                      @SuppressWarnings("ALL") final int m;
+                      @SuppressWarnings("ALL") int n;
                   }
               }
               """
@@ -252,8 +250,8 @@ class JavaTemplateTest6Test implements RewriteTest {
                   return super.visitMethodDeclaration(method, p);
               }
           })).afterRecipe(run -> {
-              J.CompilationUnit cu = (J.CompilationUnit) run.getChangeset().getAllResults().get(0).getAfter();
-              J.MethodDeclaration testMethodDecl = (J.MethodDeclaration) cu.getClasses().get(0).getBody().getStatements().get(0);
+              J.CompilationUnit cu = (J.CompilationUnit) run.getChangeset().getAllResults().getFirst().getAfter();
+              J.MethodDeclaration testMethodDecl = (J.MethodDeclaration) cu.getClasses().getFirst().getBody().getStatements().getFirst();
               assertThat(testMethodDecl.getMethodType().getThrownExceptions().stream()
                 .map(JavaType.FullyQualified.class::cast)
                 .map(JavaType.FullyQualified::getFullyQualifiedName))
@@ -291,11 +289,11 @@ class JavaTemplateTest6Test implements RewriteTest {
                   return super.visitMethodDeclaration(method, p);
               }
           })).afterRecipe(run -> {
-              J.CompilationUnit cu = (J.CompilationUnit) run.getChangeset().getAllResults().get(0).getAfter();
-              JavaType.Method type = ((J.MethodDeclaration) cu.getClasses().get(0).getBody().getStatements().get(0)).getMethodType();
+              J.CompilationUnit cu = (J.CompilationUnit) run.getChangeset().getAllResults().getFirst().getAfter();
+              JavaType.Method type = ((J.MethodDeclaration) cu.getClasses().getFirst().getBody().getStatements().getFirst()).getMethodType();
               assertThat(type).isNotNull();
               var paramTypes = type.getParameterTypes();
-              assertThat(paramTypes.get(0))
+              assertThat(paramTypes.getFirst())
                 .as("The method declaration's type's genericSignature first argument should have type 'java.util.List'")
                 .matches(tType -> tType instanceof JavaType.FullyQualified &&
                                   TypeUtils.asFullyQualified(tType).getFullyQualifiedName().equals("java.util.List"));
@@ -361,7 +359,7 @@ class JavaTemplateTest6Test implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext p) {
-                  var statement = method.getBody().getStatements().get(0);
+                  var statement = method.getBody().getStatements().getFirst();
                   if (statement instanceof J.Unary) {
                       return JavaTemplate.builder("n = 1;")
                         .contextSensitive()
@@ -437,7 +435,7 @@ class JavaTemplateTest6Test implements RewriteTest {
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext p) {
                   if (matcher.matches(method)) {
                       return JavaTemplate.apply("new Integer(#{any()})",
-                        getCursor(), method.getCoordinates().replace(), method.getArguments().get(0));
+                        getCursor(), method.getCoordinates().replace(), method.getArguments().getFirst());
                   }
                   return super.visitMethodInvocation(method, p);
               }
