@@ -20,6 +20,8 @@ import org.assertj.core.api.Condition;
 import org.assertj.core.api.InstanceOfAssertFactories;
 import org.assertj.core.api.ThrowingConsumer;
 import org.intellij.lang.annotations.Language;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -37,6 +39,7 @@ import org.openrewrite.xml.tree.Xml;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.lang.reflect.Field;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Map;
@@ -50,6 +53,24 @@ class MavenSettingsTest {
       new InMemoryExecutionContext((ThrowingConsumer<Throwable>) input -> {
           throw input;
       }));
+
+    final String MASTER_PASS_ENCRYPTED = "{6hp0oENJ604H81U6AqPSAJNapKivabHsuWVHzJoZJJo=}";
+    final String ENCRYPTED_PASSWORD = "{2XRZmSPonBYHUeRGefWQTymnQks33CW6U1NHTEtSOH4=}";
+
+    private String originalUserHome;
+
+    @TempDir
+    Path tempDir;
+
+    @BeforeEach
+    void setUp() {
+        originalUserHome = System.getProperty("user.home");
+    }
+
+    @AfterEach
+    void tearDown() {
+        System.setProperty("user.home", originalUserHome);
+    }
 
     @Test
     void parse() {
@@ -81,6 +102,62 @@ class MavenSettingsTest {
         ), ctx));
 
         assertThat(ctx.getRepositories()).hasSize(1);
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void parseWithEncryption()  throws IOException{
+        createSettingsSecurityFile();
+
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(ENCRYPTED_PASSWORD)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> repo.getId().equals("server001"))
+          .matches(repo -> repo.getUsername().equals("my_login"))
+          .matches(repo -> repo.getPassword().equals("password"));
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void parsePlainTextWithEncryption()  throws IOException{
+        createSettingsSecurityFile();
+        String plainTextPassword = "password";
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(plainTextPassword)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> repo.getId().equals("server001"))
+          .matches(repo -> repo.getUsername().equals("my_login"))
+          .matches(repo -> repo.getPassword().equals(plainTextPassword));
     }
 
     @Issue("https://github.com/openrewrite/rewrite/issues/131")
@@ -334,10 +411,67 @@ class MavenSettingsTest {
 
         assertThat(settings.getServers()).isNotNull();
         assertThat(settings.getServers().getServers()).hasSize(1);
-        assertThat(settings.getServers().getServers().get(0))
+        assertThat(settings.getServers().getServers().getFirst())
           .matches(repo -> repo.getId().equals("server001"))
           .matches(repo -> repo.getUsername().equals("my_login"))
           .matches(repo -> repo.getPassword().equals("my_password"));
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void serverCredentialsWithEncryption() throws IOException {
+        createSettingsSecurityFile();
+
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(ENCRYPTED_PASSWORD)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> repo.getId().equals("server001"))
+          .matches(repo -> repo.getUsername().equals("my_login"))
+          .matches(repo -> repo.getPassword().equals("password"));
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1155")
+    @Test
+    void serverCredentialsPlainTextWithEncryption() throws IOException {
+        createSettingsSecurityFile();
+        String plainTextPassword = "password";
+
+        MavenSettings settings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
+          //language=xml
+          """
+                <settings xmlns="http://maven.apache.org/SETTINGS/1.0.0"
+                    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                    xsi:schemaLocation="http://maven.apache.org/SETTINGS/1.0.0 http://maven.apache.org/xsd/settings-1.0.0.xsd">
+                    <servers>
+                        <server>
+                          <id>server001</id>
+                          <username>my_login</username>
+                          <password>%s</password>
+                        </server>
+                      </servers>
+                </settings>
+            """.formatted(plainTextPassword)
+        ), ctx);
+
+        assertThat(settings.getServers().getServers().getFirst())
+          .matches(repo -> repo.getId().equals("server001"))
+          .matches(repo -> repo.getUsername().equals("my_login"))
+          .matches(repo -> repo.getPassword().equals(plainTextPassword));
     }
 
     @Test
@@ -364,7 +498,7 @@ class MavenSettingsTest {
 
         assertThat(settings.getServers()).isNotNull();
         assertThat(settings.getServers().getServers()).hasSize(1);
-        assertThat(settings.getServers().getServers().get(0))
+        assertThat(settings.getServers().getServers().getFirst())
           .matches(repo -> repo.getId().equals("server001"))
           .matches(repo -> repo.getConfiguration().getTimeout().equals(40000L));
     }
@@ -506,8 +640,8 @@ class MavenSettingsTest {
 
             assertThat(settings.getLocalRepository())
               .isEqualTo("${custom.location.zz}/maven/local/repository/");
-            assertThat(settings.getServers().getServers().get(0).getUsername()).isEqualTo("${env.PRIVATE_REPO_USERNAME_ZZ}");
-            assertThat(settings.getServers().getServers().get(0).getPassword()).isEqualTo("${env.PRIVATE_REPO_PASSWORD_ZZ}");
+            assertThat(settings.getServers().getServers().getFirst().getUsername()).isEqualTo("${env.PRIVATE_REPO_USERNAME_ZZ}");
+            assertThat(settings.getServers().getServers().getFirst().getPassword()).isEqualTo("${env.PRIVATE_REPO_PASSWORD_ZZ}");
         }
 
         @Test
@@ -552,8 +686,8 @@ class MavenSettingsTest {
 
             assertThat(settings.getServers()).isNotNull();
             assertThat(settings.getServers().getServers()).hasSize(1);
-            assertThat(settings.getServers().getServers().get(0).getUsername()).isEqualTo("user");
-            assertThat(settings.getServers().getServers().get(0).getPassword()).isEqualTo("pass");
+            assertThat(settings.getServers().getServers().getFirst().getUsername()).isEqualTo("user");
+            assertThat(settings.getServers().getServers().getFirst().getPassword()).isEqualTo("pass");
         }
 
         /**
@@ -716,15 +850,14 @@ class MavenSettingsTest {
             ), ctx);
 
             MavenSettings mergedSettings = baseSettings.merge(userSettings);
-            assertThat(mergedSettings.getProfiles().getProfiles().get(0).getId()).isEqualTo("first-profile");
+            assertThat(mergedSettings.getProfiles().getProfiles().getFirst().getId()).isEqualTo("first-profile");
             assertThat(mergedSettings.getProfiles().getProfiles().get(1).getId()).isEqualTo("second-profile");
-            assertThat(mergedSettings.getProfiles().getProfiles().get(0).getRepositories().getRepositories().get(0).getId()).isEqualTo("first-repo");
-            assertThat(mergedSettings.getProfiles().getProfiles().get(1).getRepositories().getRepositories().get(0).getId()).isEqualTo("second-repo");
+            assertThat(mergedSettings.getProfiles().getProfiles().getFirst().getRepositories().getRepositories().getFirst().getId()).isEqualTo("first-repo");
+            assertThat(mergedSettings.getProfiles().getProfiles().get(1).getRepositories().getRepositories().getFirst().getId()).isEqualTo("second-repo");
         }
 
         @Test
         void replacesElementsWithMatchingIds() {
-            Path path = Paths.get("settings.xml");
             var baseSettings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"), installationSettings), ctx);
             var userSettings = MavenSettings.parse(Parser.Input.fromString(Paths.get("settings.xml"),
               //language=xml
@@ -765,15 +898,15 @@ class MavenSettingsTest {
             var mergedSettings = userSettings.merge(baseSettings);
 
             assertThat(mergedSettings.getProfiles().getProfiles()).hasSize(1);
-            assertThat(mergedSettings.getProfiles().getProfiles().get(0).getRepositories().getRepositories().get(0).getSnapshots()).isNull();
+            assertThat(mergedSettings.getProfiles().getProfiles().getFirst().getRepositories().getRepositories().getFirst().getSnapshots()).isNull();
             assertThat(mergedSettings.getActiveProfiles().getActiveProfiles()).hasSize(1);
             assertThat(mergedSettings.getMirrors().getMirrors()).hasSize(1);
 
-            assertThat(mergedSettings.getMirrors().getMirrors().get(0).getUrl())
+            assertThat(mergedSettings.getMirrors().getMirrors().getFirst().getUrl())
               .isEqualTo("http://downloads.planetmirror.com/pub/maven3000");
 
             assertThat(mergedSettings.getServers().getServers()).hasSize(1);
-            assertThat(mergedSettings.getServers().getServers().get(0))
+            assertThat(mergedSettings.getServers().getServers().getFirst())
               .hasFieldOrPropertyWithValue("username", "foo")
               .hasFieldOrPropertyWithValue("password", null);
         }
@@ -818,8 +951,8 @@ class MavenSettingsTest {
             """
         ), ctx);
 
-        MavenSettings.Server server = settings.getServers().getServers().get(0);
-        assertThat(server.getConfiguration().getHttpHeaders().get(0).getName()).isEqualTo("X-JFrog-Art-Api");
+        MavenSettings.Server server = settings.getServers().getServers().getFirst();
+        assertThat(server.getConfiguration().getHttpHeaders().getFirst().getName()).isEqualTo("X-JFrog-Art-Api");
     }
 
     @Test
@@ -861,5 +994,20 @@ class MavenSettingsTest {
           .isNotNull()
             .satisfies(serialized -> assertThat(SemanticallyEqual.areEqual(parsed, serialized)).isTrue())
             .satisfies(serialized -> assertThat(serialized.printAll().replace("\r", "")).isEqualTo(parsed.printAll()));
+    }
+
+    private void createSettingsSecurityFile() throws IOException {
+        // Set up a temporary directory to simulate the .m2 directory
+        System.setProperty("user.home", tempDir.toString());
+        Files.createDirectories(tempDir.resolve(".m2"));
+
+        Files.writeString(tempDir.resolve(".m2/settings-security.xml"),
+          //language=xml
+          """
+            <?xml version="1.0" encoding="UTF-8"?>
+            <settingsSecurity>
+                <master>%s</master>
+            </settingsSecurity>
+            """.formatted(MASTER_PASS_ENCRYPTED));
     }
 }
